# snake-game-sfml

./: .gitignore  CMakeLists.txt  README.md
src/: engine.hpp  main.cpp
src/core/: apple.cpp  apple.hpp  engine.hpp  snake.cpp  snake.hpp  window.cpp  window.hpp
src/ui/: button.cpp  button.hpp  menu.cpp  menu.hpp  window.cpp  window.hpp
